Added content to website
Added bootstrap-driven content to website including header, about me, and recent projects

--- a/index.html
+++ b/index.html
@@ -1,2 +1,110 @@
-<h4>Placeholder title</h4>
-<a href="visualizer/app.html">Visualizer</a>
+<html>
+	<head>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="visualizer/static/bootstrap/css/bootstrap.min.css">
+    	<link rel="stylesheet" type="text/css" href="page-style.css">
+    </head>
+    <body>
+		<div class="jumbotron">
+			<div class="container" style="display: inline-flex;">
+				<img class="img-rounded float-left" src="media/luke.jpg">
+				<div class="container">
+					<h1>Luke Janoschka</h1>
+					<div>
+						<p>Computational Modeling and Data Analytics
+						<br/>Virginia Polytechnic Institute - Class of 2022</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="panel-group">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3>My Projects</h3>
+					</div>
+					<div class="panel-body">
+						<div class="card-deck">
+							<div class="card">
+				    			<div class="card-body text-center">
+				    				<h5 class="card-text">Audio Optics</h5>
+				    				<a href="visualizer/app.html"><img class="img-rounded border border-primary" src="media/audiooptics.png" style="height: 100px;"/></a>
+				      				<p class="card-text"><i>Audio Optics is a web-based music visualization tool created with the goal of enriching a listener's experience. The application is written primarily in javascript with the <a href="https://p5js.org/">p5 library</a>. The interface was created using <a href="https://getbootstrap.com/">bootstrap html</a> with various extentions</i></p>
+				    			</div>
+				    		</div>
+				    		<div class="card">
+				    			<div class="card-body text-center">
+				    				<h5 class="card-text">Lyric Analysis</h5>
+				    				<a href="under-construction.html"><img class="img-rounded border border-primary" src="media/graph.png" style="height: 100px;"/></a>
+				      				<p class="card-text"><i>Used data set of the lyrics of the Billboard Top 100 songs for each year between 1965 and 2015 to analyze frequency of words used over time<br/><a href="https://github.com/walkerkq/musiclyrics">Click here</a> for data set</i></p>
+				    			</div>
+				    		</div>
+				    		<div class="card">
+				    			<div class="card-body text-center">
+				    				<h5 class="card-text">K-Means</h5>
+				    				<a href="under-construction.html"><img class="img-rounded border border-primary" src="media/clusters.png" style="height: 100px;"/></a>
+				      				<p class="card-text"><i>Implementation of the classic k-means clustering algorithm I created for the first semester of my Integrated Quantitative Sciences class. Also includes the analysis of several data sets included for the project</i></p>
+				    			</div>
+				    		</div>
+				    		<div class="card">
+				    			<div class="card-body text-center">
+				    				<h5 class="card-text">R Markdown</h5>
+				    				<a href="under-construction.html" title="Hadley Wickham and others at RStudio / CC BY-SA (https://creativecommons.org/licenses/by-sa/4.0)"><img class="img-rounded border border-primary" height="100" alt="R logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/R_logo.svg/512px-R_logo.svg.png"></a>
+				      				<p class="card-text"><i>Analysis of several datasets using R Markdown created as homework and exams for the second semester of my Integrated Quantitative Sciences class.</i></p>
+				    			</div>
+				    		</div>
+				  		</div>
+				  	</div>
+	  			</div>
+	  			<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3>About Me</h3>
+					</div>
+					<div class="panel-body">
+						<div class="container" style="display: inline-flex">
+							<div class="container" style="width: 50%">
+								<h4>Background</h4><br/>
+								<p class="text-body">Hi I'm Luke! I'm currently in my junior year at Virginia Tech studying Computational Modeling and Data Analytics (CMDA). I have a background in computer science from high school and my current minior in CS. I am experienced in data analysis using python and R scripting, software development in C and Java, backend development with SQL, and web development using HTML/CSS, JavaScript/jQuery, and Bootstrap.</p>
+								<p class="text-body">I absolutely love music. I've been collecting vinyl records for nearly 4 years now, and I've been playing instruments such as the guitar and piano since I was 9. This passion for music helped me to create my music visualizer Audio Optics. This project led me into the very interesting field of signal processing. Ever since, I have been researching and working on projects related to music analysis and signal processing independently.</p><br/>
+								<h4>Future Plans</h4><br/>
+								<p class="text-body">With my degree, I aspire for a career that will mix my interest in economics and business with my CMDA degree and my dream of being a data scientist. I hope to find an analyst role of sorts and evenrually pursue an MBA. I am also very interested in signal processing and music analysis. I would love to do professional research in signal processing and music analysis someday.</p> 
+							</div>
+							<div class="container flex-column" style="width: 50%">
+								<h4>What I've Been Doing</h4>
+								<br/>
+								<ul class="list-group" style="width: 90%">
+									<li class="list-group-item">
+										<h5>August 2018</h5>
+										<p class="text-muted">Began attending Virginia Tech for Computational Modeling and Data Analytics</p>
+									</li>
+									<li class="list-group-item">
+										<h5>June 2018</h5>
+										<p class="text-muted">Graduated from Deep Run High School</p>
+									</li>
+									<li class="list-group-item">
+										<h5>May 2018</h5>
+										<p class="text-muted">Finshed Audio Optics for high school senior capstone</p>
+									</li>
+									<li class="list-group-item">
+										<h5>June 2017</h5>
+										<p class="text-muted">Started part-time internship at Virginia ABC where I worked on administrative database interfaces <br/><i>More info <a href="www.example.com">here</a></i></p>
+									</li>
+									<li class="list-group-item">
+										<h5>March 2017</h5>
+										<p class="text-muted">I am now NOCTI certified! Yippee!</p>
+									</li>
+									<li class="list-group-item">
+										<h5>January 2017</h5>
+										<p class="text-muted">Team placed 20th overall in the country-wide CyberPatriot security competition</p>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+	  		</div>
+	  	</div>
+	</body>
+</html>
