--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 				    		<div class="card">
 				    			<div class="card-body text-center">
 				    				<h5 class="card-text">Lyric Analysis</h5>
-				    				<a href="under-construction.html"><img class="img-rounded border border-primary" src="media/graph.png" style="height: 100px;"/></a>
+				    				<a href="under-construction.html"><img class="img-rounded border border-primary" src="media/graph.PNG" style="height: 100px;"/></a>
 				      				<p class="card-text"><i>Used data set of the lyrics of the Billboard Top 100 songs for each year between 1965 and 2015 to analyze frequency of words used over time<br/><a href="https://github.com/walkerkq/musiclyrics">Click here</a> for data set</i></p>
 				    			</div>
 				    		</div>
 				    		<div class="card">
 				    			<div class="card-body text-center">
 				    				<h5 class="card-text">K-Means</h5>
-				    				<a href="under-construction.html"><img class="img-rounded border border-primary" src="media/clusters.png" style="height: 100px;"/></a>
+				    				<a href="under-construction.html"><img class="img-rounded border border-primary" src="media/clusters.PNG" style="height: 100px;"/></a>
 				      				<p class="card-text"><i>Implementation of the classic k-means clustering algorithm I created for the first semester of my Integrated Quantitative Sciences class. Also includes the analysis of several data sets included for the project</i></p>
 				    			</div>
 				    		</div>
